dark mode fixed

--- a/src/app/report/operating-budget/operating-budget.component.scss
+++ b/src/app/report/operating-budget/operating-budget.component.scss
@@ -1,7 +1,7 @@
 .table-th {
-    @apply py-2 px-4 border-b-2 border-gray-200 leading-tight font-['Cormorant'] text-2xl
+    @apply py-2 px-4 border-b-2 border-gray-200 leading-tight font-['Cormorant'] text-2xl;
 }
 
 .table-td {
-    @apply py-2 px-4 border-b-2 border-gray-200 leading-tight font-['Wittgenstein']
+    @apply py-2 px-4 border-b-2 border-gray-200 leading-tight font-['Wittgenstein'];
 }
